app.py with validation

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -881,7 +881,7 @@
     "3. Converted all column names to lowercase to keep them consistent.\n",
     "4. Changed the \"totalcharges\" column to numeric because it had some non-numeric entries. \n",
     "   - If there were invalid entries, they were turned into NaN (missing values).\n",
-    "5. Mapped 'Yes' to 1 and 'No' to 0 for SeniorCitizen.\n",
+    "5. Mapped 'Yes' to 1 and 'No' to 0 for seniorcitizen.\n",
     "6. Checked for missing values.\n",
     "7. Dropped rows where \"totalcharges\" was missing because those rows mostly had tenure = 0 (new customers who didn't generate charges yet).\n",
     "8. Dropped the \"customerid\" column because it is just an ID and doesn't help in predicting churn.\n",
