app.py with validation

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -710,11 +710,77 @@
    "id": "2245ad2b",
    "metadata": {},
    "source": [
-    "- Most customers are Male, without dependents, and use paperless billing.\n",
-    "- Most customers are on month-to-month contracts, and they show the highest churn rate based on cross-tab analysis.\n",
-    "- Fiber optic users churn more than DSL or No Internet customers.\n",
-    "- Customers using tech support or online security tend to churn less.\n",
-    "- Electronic check is the most used payment method and shows higher churn."
+    "📊 **Categorical Feature Observations**\n",
+    "\n",
+    "• Total records: 5,625\n",
+    "\n",
+    "• Gender:\n",
+    "  - 2 categories (Male, Female)\n",
+    "  - Most common: Male (2,851 times)\n",
+    "\n",
+    "• Senior Citizen:\n",
+    "  - 2 categories (Yes, No)\n",
+    "  - Most customers are **not** senior citizens (\"No\" = 4,721 times)\n",
+    "\n",
+    "• Partner:\n",
+    "  - 2 categories (Yes, No)\n",
+    "  - Majority do **not** have a partner (\"No\" = 2,920 times)\n",
+    "\n",
+    "• Dependents:\n",
+    "  - 2 categories (Yes, No)\n",
+    "  - Majority do **not** have dependents (\"No\" = 3,941 times)\n",
+    "\n",
+    "• Phone Service:\n",
+    "  - 2 categories (Yes, No)\n",
+    "  - Most customers **have** phone service (\"Yes\" = 5,076 times)\n",
+    "\n",
+    "• Multiple Lines:\n",
+    "  - 3 categories (Yes, No, No phone service)\n",
+    "  - \"No\" is the most frequent option (2,731 times)\n",
+    "\n",
+    "• Internet Service:\n",
+    "  - 3 categories (DSL, Fiber optic, No)\n",
+    "  - \"Fiber optic\" is the most common (2,472 times)\n",
+    "\n",
+    "• Online Security:\n",
+    "  - 3 categories (Yes, No, No internet service)\n",
+    "  - Most customers do **not** have online security (\"No\" = 2,775 times)\n",
+    "\n",
+    "• Online Backup:\n",
+    "  - 3 categories (Yes, No, No internet service)\n",
+    "  - \"No\" is the most common (2,443 times)\n",
+    "\n",
+    "• Device Protection:\n",
+    "  - 3 categories (Yes, No, No internet service)\n",
+    "  - Most selected \"No\" (2,464 times)\n",
+    "\n",
+    "• Tech Support:\n",
+    "  - 3 categories (Yes, No, No internet service)\n",
+    "  - \"No\" is the most common response (2,762 times)\n",
+    "\n",
+    "• Streaming TV:\n",
+    "  - 3 categories (Yes, No, No internet service)\n",
+    "  - \"No\" appears most frequently (2,222 times)\n",
+    "\n",
+    "• Streaming Movies:\n",
+    "  - 3 categories (Yes, No, No internet service)\n",
+    "  - \"Yes\" is the top response (2,201 times)\n",
+    "\n",
+    "• Contract Type:\n",
+    "  - 3 categories (Month-to-month, One year, Two year)\n",
+    "  - Most customers are on **Month-to-month** contracts (3,087 times)\n",
+    "\n",
+    "• Paperless Billing:\n",
+    "  - 2 categories (Yes, No)\n",
+    "  - Most customers opted for **Paperless Billing** (\"Yes\" = 3,326 times)\n",
+    "\n",
+    "• Payment Method:\n",
+    "  - 4 categories\n",
+    "  - **Electronic check** is the most used (1,902 times)\n",
+    "\n",
+    "• Churn (Target):\n",
+    "  - 2 categories (Yes, No)\n",
+    "  - Most customers **did not churn** (\"No\" = 4,130 times)\n"
    ]
   },
   {
@@ -788,6 +854,16 @@
    ],
    "source": [
     "pd.crosstab(train['contract'], train['churn'], normalize='index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98fcc8e7",
+   "metadata": {},
+   "source": [
+    "- Month-to-month customers are most likely to churn (43%).\n",
+    "- One year and Two year contracts have much lower churn.\n",
+    "- Two year contracts show the strongest retention (only 2.97% churn)."
    ]
   },
   {
@@ -867,6 +943,16 @@
    ],
    "source": [
     "pd.crosstab(train['paymentmethod'], train['churn'], normalize='index')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b395b7f",
+   "metadata": {},
+   "source": [
+    "- Customers using **electronic check** churn the most (nearly 45%).\n",
+    "- Those using **automatic payments** (credit/bank) churn the least.\n",
+    "- Payment method plays a key role in customer retention."
    ]
   },
   {
@@ -6073,23 +6159,48 @@
    "source": [
     "## gender\n",
     "Observation:\n",
-    "- Very little difference in churn rate.\n",
-    "- Female: 26.9% churn, Male: 26.2% churn.\n",
-    "Association with Churn:\n",
-    "- Not statistically significant.\n",
-    "- No gender-specific targeting needed.\n",
+    "\n",
+    "📊 Gender-Based Churn Insights\n",
+    "\n",
+    " Distribution:\n",
+    "- Male and Female customers are nearly equal in number.\n",
+    "- Female: ~49% | Male: ~50%\n",
+    "\n",
+    " Churn Rate Comparison:\n",
+    "- Male churn rate ≈ Female churn rate\n",
+    "- No major difference observed in bar plots or heatmap.\n",
+    "\n",
+    " Hypothesis Test (Chi-Square):\n",
+    "- p-value = 0.61 (greater than 0.05)\n",
+    "✅ Conclusion: Gender and Churn are NOT significantly associated.\n",
+    "\n",
     "\n",
     "## seniorcitizen\n",
     "Observation:\n",
-    "- Seniors churn more (~41.7%) compared to non-seniors (~23.7%).\n",
+    "\n",
+    "Distribution:\n",
+    "- Most customers are **not senior citizens** (~84%)\n",
+    "- Only ~17% of customers are senior citizens\n",
+    "- Seniors churn more (~43%) compared to non-seniors (~23%).\n",
     "Association with Churn:\n",
     "- Strong positive correlation with churn.\n",
     "Recommendation:\n",
     "- Offer senior-friendly support.\n",
-    "- Provide simplified plans or dedicated helplines.\n",
+    "- Provide simplified plans or dedicated helplines\n",
+    "Hypothesis Test (Chi-Square):\n",
+    "- p-value = 2.8e-11 (very small, < 0.05)\n",
+    "✅ Conclusion: Senior citizenship status is **significantly associated** with churn.\n",
+    "\n",
     "\n",
     "## partner\n",
     "Observation:\n",
+    "\n",
+    "Distribution:\n",
+    "- Slightly more customers **have no partner** (~52%) than those who do\n",
+    "\n",
+    "Churn Rate Insight:\n",
+    "- Customers **without a partner** have a higher churn rate\n",
+    "- Heatmap and bar chart show more \"Yes\" churn cases in this group\n",
     "- No partner: 33% churn, Partner: 19.7% churn.\n",
     "Association with Churn:\n",
     "- Statistically significant.\n",
