--- a/eda.ipynb
+++ b/eda.ipynb
@@ -6167,8 +6167,8 @@
     "- Female: ~49% | Male: ~50%\n",
     "\n",
     " Churn Rate Comparison:\n",
-    "- Male churn rate ≈ Female churn rate\n",
-    "- No major difference observed in bar plots or heatmap.\n",
+    "- Male churn rate ≈ Female churn rate.\n",
+    "- No major difference observed.\n",
     "\n",
     " Hypothesis Test (Chi-Square):\n",
     "- p-value = 0.61 (greater than 0.05)\n",
@@ -6182,11 +6182,14 @@
     "- Most customers are **not senior citizens** (~84%)\n",
     "- Only ~17% of customers are senior citizens\n",
     "- Seniors churn more (~43%) compared to non-seniors (~23%).\n",
+    "\n",
     "Association with Churn:\n",
     "- Strong positive correlation with churn.\n",
+    "\n",
     "Recommendation:\n",
     "- Offer senior-friendly support.\n",
     "- Provide simplified plans or dedicated helplines\n",
+    "\n",
     "Hypothesis Test (Chi-Square):\n",
     "- p-value = 2.8e-11 (very small, < 0.05)\n",
     "✅ Conclusion: Senior citizenship status is **significantly associated** with churn.\n",
